updated to solve all layout problems

--- a/public/style.styl
+++ b/public/style.styl
@@ -5,13 +5,14 @@ global-reset()
 blue = #377ad0 
 tbRed = #de4044
 tbBlack = #414042 
+tbGreen = #354a4c
 *
   margin 0
   padding 0
   border 0
 
 html
-  background #354a4c
+  background tbGreen
   height 100%
 
 body
@@ -44,6 +45,9 @@ body
   background-image url("/img/tourbusStdHeaderBG.png")
   background-repeat repeat-x
 
+#stdLogo
+  margin-left -5px
+
 #stdHeaderContent
   margin-left auto
   margin-right auto
@@ -67,10 +71,11 @@ body
   width 830px
   height 165px
   #indexLogo
-    margin-top 45px
+    margin-top 42px
+    margin-left -5px
 
 #headerLinks
-  width 659px
+  width 664px
   float right
   display inline
   margin-top 11px
@@ -79,7 +84,19 @@ body
   min-height 32px
   font-size 11pt
 
-#headerLink, #footerLink
+#headerLink
+  margin-right 15px
+  display inline
+  text-shadow 0 0px 6px black
+.headerSeperator
+  padding-top 5px
+.currentHeaderLink
+  color tbRed
+
+#footerLinks
+  margin-left 3px
+
+#footerLink
   margin-right 15px
   display inline
 .headerSeperator
@@ -99,14 +116,16 @@ body
     margin-right auto
     width 830px
   #description
-    padding-top 60px
+    padding-top 56px
+    padding-left 1px
     width 375px
     height 81px
     background-image url("/img/tourbusIndexInfoText.png")
     background-repeat no-repeat
     background-position center bottom
   #appStore
-    padding-top 20px
+    padding-top 17px
+    margin-left 1px
 
 #contactUsHeader
   height 22px + 44px
@@ -115,18 +134,18 @@ body
   background-position left bottom
 
 #infoText
-  margin-top 35px
+  margin-top 29px
   width 580px
   color tbBlack
   font-size 9pt
-  line-height 1.5
+  line-height 1.4
   ol
     list-style initial
     margin-left 23px
     margin-bottom 12px
   b
     color tbRed
-    margin-bottom 7px
+    margin-bottom 4px
     margin-top 12px
     font-size 10.5pt
     line-height 2
@@ -148,8 +167,8 @@ body
   background-position center center
   margin-left auto
   margin-right auto
-  margin-top 21px
-  margin-bottom 78px
+  margin-top 20px
+  margin-bottom 74px
   #ratingDisplay
     color tbBlack
     margin-left 27px
@@ -162,13 +181,13 @@ body
   #ratingArtistName
     color white
     height 38px
-    padding-left 24px
+    padding-left 18px
     padding-top 10px
     b
       font-size 15pt
   #ratingConcertInfo
     overflow hidden
-    padding-left 24px
+    padding-left 18px
     height 24px
     b
       padding-right 5px
@@ -183,18 +202,18 @@ body
     background-size cover
     background-repeat no-repeat
     background-position center center
-    box-shadow 2px 2px 2px tbBlack
-    '-moz-box-shadow' 2px 2px 2px tbBlack
-    '-webkit-box-shadow' 2px 2px 2px tbBlack
+    //box-shadow 2px 2px 2px tbBlack
+    //'-moz-box-shadow' 2px 2px 2px tbBlack
+    //'-webkit-box-shadow' 2px 2px 2px tbBlack
   #ratingRatings
     font-size 12pt
     width 240px
     display inline
     float right
-    margin-right 44px
-    margin-top 28px
+    margin-right 41px
+    margin-top 32px
   #ratingLine
-    margin-bottom 14px
+    margin-bottom 11px
   #ratingImage
     margin-top -3px
     float right
@@ -202,17 +221,16 @@ body
     display block
     margin-left 18px
     margin-right 18px
-    margin-top 14px
+    margin-top 11px
     font-weight lighter
     font-size 11pt
-    line-height 1.2
+    line-height 1.3
     height 95px
-    overflow scroll
+    overflow auto
   #authorAndRatings
     margin-left 18px
     margin-top 14px
-    b
-      font-size 11pt
+    font-size 11pt
     #ratingCount
       display inline
       color tbRed
@@ -242,6 +260,7 @@ body
   text-align right
   float right
   display inline
+  margin-right 6px
   b
     font-family 'Helvetica'
 
@@ -250,9 +269,8 @@ body
   float right
   width 390px
   height 562px
-  margin-top -65px
-  margin-left auto
-  margin-right auto
+  margin-top -58px
+  margin-right -1px
   background-image url("/img/tourbusIndexAppDemo.png")
   background-repeat no-repeat
   background-position center right
@@ -263,6 +281,7 @@ body
   text-align left
   line-height: 1.5
   font-size 12px
+  margin-top 5px
   margin-left auto
   margin-right auto
 
